RESOLVED FIXED Bug 248128
`font-variant: small-caps normal;` should be invalid syntax
https://bugs.webkit.org/show_bug.cgi?id=248128
Summary `font-variant: small-caps normal;` should be invalid syntax
Tim Nguyen (:ntim)
Reported 2022-11-19 03:09:57 PST
This still properly parses in Webkit, even though it really shouldn't according to the syntax. font-variant: normal/none are valid, but these are invalid (replace * with any valid longhand value): - `* normal` - `normal *` - `normal none` - `none normal` - `* none` - `none *` css/css-fonts/parsing/font-variant-invalid.html should be extended with such testcases.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-26 03:10:16 PST
Tim Nguyen (:ntim)
Comment 2 2023-05-26 20:40:48 PDT
Ahmad Saleem
Comment 3 2023-09-20 18:46:26 PDT
This is only failing test for InterOp 2022 (interop-2022-text) in CSS Fonts.
Nathan Solomon
Comment 4 2024-08-13 16:22:17 PDT
EWS
Comment 5 2024-08-16 14:29:18 PDT
Committed 282368@main (2f740da85dda): <https://commits.webkit.org/282368@main> Reviewed commits have been landed. Closing PR #32154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.