`font-variant: small-caps normal;` should be invalid syntax https://bugs.webkit.org/show_bug.cgi?id=248128 rdar://102679841

Reviewed by Matthieu Dubet.

Add a check for the "normal" keyword when parsing font-variant values to make the parse invalid if "normal" is used with other values.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-variant-invalid-expected.txt:
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeFontVariantShorthand):

Canonical link: https://commits.webkit.org/282368@main